# wheeler

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_comprehensive_backtest.py  run_fast_backtest.py  test_paper_connection.py
.github/workflows/: deploy.yml
config/: backtest_10k.yml  backtest_10k_aggressive.yml  backtest_10k_ultra_conservative.yml  wheel_10k_optimized.yml  wheel_10k_paper.yml  wheel_30k_aggressive.yml  wheel_strategy_OLD.yml
src/: main.py  wheel_bot.py
src/analysis/: __init__.py  strategy_analyzer.py
src/backtesting/: historical_data.py  run_backtest.py  wheel_backtester.py
src/config/: __init__.py  settings.py
src/managers/: __init__.py  account_manager.py
src/models/: __init__.py  alpaca_models.py  position.py
src/services/: __init__.py  alpaca_service.py
tests/: conftest.py  test_account_manager.py  test_alpaca_connection.py  test_alpaca_service.py  test_main.py  test_position.py  test_settings.py  test_strategy_analyzer.py  test_wheel_bot.py
tests/integration/: test_wheel_strategy.py
